[gd_scene load_steps=8 format=3 uid="uid://bumpjbhfi4uxm"]

[ext_resource type="Script" path="res://assets/actors/monster_a/monster_a.gd" id="1_0y4s8"]
[ext_resource type="Texture2D" uid="uid://bu6qh00vfaufg" path="res://icon.svg" id="2_x002v"]
[ext_resource type="Script" path="res://modules/carry/carrier_2d.gd" id="4_2txmg"]
[ext_resource type="Script" path="res://modules/carry/carriable_2d.gd" id="5_2gv0v"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_r14q1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gdujy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4s1kk"]
size = Vector2(40, 34)

[node name="monster_a" type="RigidBody2D"]
mass = 50.0
physics_material_override = SubResource("PhysicsMaterial_r14q1")
gravity_scale = 0.0
lock_rotation = true
continuous_cd = 2
script = ExtResource("1_0y4s8")

[node name="avatar" type="Node2D" parent="."]

[node name="sprite_2d" type="Sprite2D" parent="avatar"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_x002v")
offset = Vector2(0, -64)

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gdujy")

[node name="carry" type="Node2D" parent="."]

[node name="carrier_2d" type="Node2D" parent="carry"]
script = ExtResource("4_2txmg")

[node name="carriable_2d" type="Area2D" parent="carry"]
gravity_space_override = 4
script = ExtResource("5_2gv0v")

[node name="collision_shape_2d" type="CollisionShape2D" parent="carry/carriable_2d"]
shape = SubResource("RectangleShape2D_4s1kk")

[node name="carry_remote_transform_2d" type="RemoteTransform2D" parent="carry"]

[node name="carry_height_marker_2d" type="Marker2D" parent="carry"]
position = Vector2(0, -48)

[node name="animation_player" type="AnimationPlayer" parent="."]
